# zksync-os-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  run_local.sh
.github/workflows/: ci.yml  loadtest.yml
docs/src/design/: base_token_price_updater.md
docs/src/guides/: running_with_l1.md
docs/src/setup/: local_run.md
genesis/: genesis.json
integration-tests/: Cargo.toml
integration-tests/src/: config.rs  contracts.rs  lib.rs  network.rs  provider.rs
integration-tests/src/upgrade/: tester.rs
integration-tests/test-contracts/src/: P256GasRecorder.sol
integration-tests/tests/: erc20.rs  interop.rs  l1.rs  precompile.rs
integration-tests/tests/upgrade/: mod.rs
lib/base_token_adjuster/: Cargo.toml
lib/base_token_adjuster/src/: lib.rs  metrics.rs
lib/batch_types/: Cargo.toml
lib/batch_types/src/: batch_info.rs
lib/contract_interface/src/: lib.rs  models.rs
lib/external_price_api/: Cargo.toml
lib/external_price_api/src/: cmc_api.rs  coingecko_api.rs  forced_price_client.rs  lib.rs  tests.rs
lib/interop_watcher/: Cargo.toml
lib/interop_watcher/src/: lib.rs
lib/l1_watcher/: Cargo.toml
lib/multivm/: build.rs
lib/network/: Cargo.toml
lib/operator_signer/: Cargo.toml
lib/operator_signer/src/: lib.rs
lib/rpc/: Cargo.toml
lib/rpc_api/: Cargo.toml
lib/types/: Cargo.toml
loadbase/: Cargo.toml
loadbase/src/: erc20.rs  erc20_worker.rs  metrics.rs  output.rs
local-chains/: README.md
local-chains/v30.2/: genesis.json
local-chains/v31/: config.json
local-chains/v31.0/: genesis.json
tools/update-state-json/: README.md
(+102 files in other folders)
