[package]
name = "zksync_os_operator_signer"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy = { workspace = true, default-features = false, features = [
    "signer-local",
    "k256",
    "network",
    "consensus",
] }
async-trait.workspace = true
gcp_auth.workspace = true
k256 = { version = "0.13", features = ["pem"] }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
base64.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
